overflow fixed in falling text

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -252,7 +252,7 @@ html {
 
 .falling-text-container-highlight {
   height: 300px;
-  max-width: 1232px;
+  max-width: 1200px;
   margin: 5rem auto 0 auto;
 }
 
